@@ -1,5 +1,10 @@
 2012-04-30  Vanessa Gil  <vanessa.gil@artica.es>
 
+	* operation/reporting/graph_viewer.php
+	  operation/events: Fixed calendar.
+
+2012-04-30  Vanessa Gil  <vanessa.gil@artica.es>
+
 	* operation/agentes/datos_agente.php: Fixed: bad layout in view data and
 	changed calendar.
 
